[project]
name = "tempcache"
version = "0.0.11"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
description = "Python library to cache data and function results in temporary files"
keywords = ["caching", "tempfiles"]
authors = [ {"name" = "furechan", "email" = "furechan@xsmail.com"} ]
urls.homepage = "https://github.com/furechan/tempcache"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[dependency-groups]
dev = [
 "pytest",
 "cloudpickle",
 "ipykernel>=6.29.5",
]


[build-system]
requires = [ "hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
targets.wheel.sources = ["src"]
dev-mode-dirs = ["src"]
only-include = ["src"]
exclude = [".*"]

[tool.pydev]
allow-publish = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*.ipynb" = ["F401", "F811"]

[tool.pytest.ini_options]
addopts = [ "-p no:cacheprovider"]
testpaths = ["tests"]

